Fix horizontal scroll

--- a/components/AutoComplete/autoComplete.module.css
+++ b/components/AutoComplete/autoComplete.module.css
@@ -32,7 +32,7 @@
   position: absolute;
   width: 100%;
   max-height: 260px;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .searchIconWrapper {
